--- a/TP04.html
+++ b/TP04.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>TP N° 4 - </h1>
+    </header>
+
+    <main>
+        <h3>1. ¿Cuál es la etiqueta principal utilizada para crear una tabla en HTML?
+        </h3>
+        <p>La etiqueta principal para crear una tabla "HTML"es table.</p>
+        <h3>2. ¿Qué etiqueta se utiliza para definir una fila en una tabla?
+        </h3>
+        <p></p>
+        <h3>¿Cuál es la etiqueta utilizada para crear una celda de encabezado en una tabla?
+        </h3>
+        <p></p>
+        <h3>¿Cuál es la etiqueta utilizada para crear una celda de datos en una tabla?
+        </h3>
+        <p></p>
+        <h3>¿Qué atributo se utiliza para especificar cuántas columnas debe abarcar una celda?
+        </h3>
+        <p></p>
+        <h3>¿Qué atributo se utiliza para especificar cuántas filas debe abarcar una celda?
+        </h3>
+        <p></p>
+        <h3>Si necesitamos crear una tabla con 10 filas ¿qué etiqueta y cuántas veces se debe utilizar para definir las filas?
+        </h3>
+        <p></p>
+    </main>
 </body>
 </html>
