--- a/TP04.html
+++ b/TP04.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>TP N° 4 - </h1>
@@ -13,25 +15,60 @@
     <main>
         <h3>1. ¿Cuál es la etiqueta principal utilizada para crear una tabla en HTML?
         </h3>
-        <p>La etiqueta principal para crear una tabla "HTML"es table.</p>
+        <p>La etiqueta principal es "table".</p>
         <h3>2. ¿Qué etiqueta se utiliza para definir una fila en una tabla?
         </h3>
-        <p></p>
-        <h3>¿Cuál es la etiqueta utilizada para crear una celda de encabezado en una tabla?
+        <p>La etiqueta que se utiliza es "tr"</p>
+        <h3>3. ¿Cuál es la etiqueta utilizada para crear una celda de encabezado en una tabla?
         </h3>
-        <p></p>
-        <h3>¿Cuál es la etiqueta utilizada para crear una celda de datos en una tabla?
+        <p>La etiqueta que se utiliza es "th"</p>
+        <h3>4. ¿Cuál es la etiqueta utilizada para crear una celda de datos en una tabla?
         </h3>
-        <p></p>
-        <h3>¿Qué atributo se utiliza para especificar cuántas columnas debe abarcar una celda?
+        <p>La etiqueta que se utiliza es "td"</p>
+        <h3>5. ¿Qué atributo se utiliza para especificar cuántas columnas debe abarcar una celda?
         </h3>
-        <p></p>
-        <h3>¿Qué atributo se utiliza para especificar cuántas filas debe abarcar una celda?
+        <p>El atributo que se utiliza es "rowspan"<br> rowspan: el atributo son los intervalos de fila, funcionan igual
+            que los intervalos de columna, pero hacen que la celda se extienda hacia abajo en varias filas.</p>
+        <h3>6. ¿Qué atributo se utiliza para especificar cuántas filas debe abarcar una celda?
         </h3>
-        <p></p>
-        <h3>Si necesitamos crear una tabla con 10 filas ¿qué etiqueta y cuántas veces se debe utilizar para definir las filas?
+        <p>EL atributos que se utilizan es "colspan"<br> colspan: el atributo colspan="2" lo que significa que esa fila
+            ocupa 2 columnas. De antemano se que la tabla tiene dos</p>
+        <h3>Si necesitamos crear una tabla con 10 filas ¿qué etiqueta y cuántas veces se debe utilizar para definir las
+            filas?
         </h3>
-        <p></p>
+        <p>La etiqueta que nesecitamos es "th" y lo tenemos que utilizar 10 veces.</p>
+        <br>
+        <h2>TABLAS DE COMIDA</h2>
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Calorias</th>
+                <th>Tipo</th>
+                <th>Imagen</th>
+            </tr>
+            <tr>
+                <td>Bizcochuelo</td>
+                <td>297</td>
+                <td>torta</td>
+                <td><img src="Bizcochuelo-casero-esponjoso (1).webp" alt="Bizcochuelo" width="30" height="20"></td>
+            </tr>
+            <tr>
+                <td>Queso</td>
+                <td>402</td>
+                <td>Lacteo</td>
+                <td><img src="Queso.jpg" alt="Queso" width="35" height="25"></td>
+            </tr>
+            <tr>
+                <td>Huevo</td>
+                <td>155</td>
+                <td>Alimento</td>
+                <td><img src="Huevo.jpg" alt="Huevo" width="30" height="20"></td>
+            </tr>
+        </table>
+
     </main>
+
+
 </body>
+
 </html>
