--- a/TP04.html
+++ b/TP04.html
@@ -64,6 +64,85 @@
                 <td>Alimento</td>
                 <td><img src="Huevo.jpg" alt="Huevo" width="30" height="20"></td>
             </tr>
+            <tr>
+                <td>Arroz</td>
+                <td>130</td>
+                <td>cereal</td>
+                <td><img src="descarga.jpeg" alt="Arroz" width="30" height="20"></td>
+            </tr>
+            <tr>
+                <td>Manzana</td>
+                <td>52</td>
+                <td>Fruta</td>
+                <td><img src="diseno-etiqueta-manzana-aislada_1308-66383.avif" alt="manzana" width="30" height="20">
+                </td>
+            </tr>
+        </table>
+        <h2>Corredores de turismo carretera</h2>
+        <table>
+            <tr>
+                <th>Pos.</th>
+                <th>Numero</th>
+                <th>Piloto</th>
+                <th>Marca</th>
+                <th>Vueltas</th>
+                <th>Tiempo</th>
+                <th>Diferencia</th>
+            </tr>
+            <tr>
+                <td>1°</td>
+                <td>1</td>
+                <td>Werner,Mariano</td>
+                <td><img src="logo-ford-mustang-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:47.494</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>2°</td>
+                <td>19</td>
+                <td>Ciantini,Diego</td>
+                <td><img src="logo-chevrolet-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:47.868</td>
+                <td>0.374</td>
+            </tr>
+            <tr>
+                <td>3°</td>
+                <td>6</td>
+                <td>Lambiris,Mauricio</td>
+                <td><img src="logo-ford-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:51.295</td>
+                <td>3.801</td>
+            </tr>
+            <tr>
+                <td>4°</td>
+                <td>157</td>
+                <td>De Benedictis,Juan B.</td>
+                <td><img src="logo-ford-mustang-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:52.639</td>
+                <td>5.145</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>79</td>
+                <td>Chapur,Facundo</td>
+                <td><img src="logo-dodge-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:54.178</td>
+                <td>6.684</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>197</td>
+                <td>Quijada,Marcos</td>
+                <td><img src="logo-chevrolet-camaro-xs.png" alt="logo" width="35" height="30"></td>
+                <td>30</td>
+                <td>41:54.544</td>
+                <td>7.050</td>
+            </tr>
         </table>
 
     </main>
